--- a/404.html
+++ b/404.html
@@ -5,14 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirecting...</title>
     <script>
-        // Redirige vers index.html en préservant la route originale
         (function() {
-            const pathname = window.location.pathname; // Chemin de la route
-            const search = window.location.search;     // Paramètres éventuels
-            const hash = window.location.hash;         // Fragment éventuel
+            // Si on est déjà sur la bonne page, ne pas rediriger
+            if (window.location.pathname === '/' || window.location.hash) {
+                return;
+            }
 
-            // Redirection vers index.html avec le chemin en hash
-            const redirectUrl = `${window.location.origin}/index.html#${pathname}${search}${hash}`;
+            // Reconstruit l'URL sans `index.html`
+            const pathname = window.location.pathname.replace('/index.html', ''); // Supprime index.html
+            const search = window.location.search || '';
+            const hash = window.location.hash || `#${pathname}`;
+
+            // Redirige vers l'origine sans `/index.html`
+            const redirectUrl = `${window.location.origin}${hash}${search}`;
+            console.log(`Redirecting to: ${redirectUrl}`);
             window.location.replace(redirectUrl);
         })();
     </script>
